# planet-fastapi-temp

./: .dockerignore  .gitignore  AGENTS.md  CHATBOT_README.md  README.md  SRS.md
.cursor/rules/: specify-rules.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pre-commit.yml
docs/: api-requirements-backend.md  api-requirements-mvp.md  api.md  architecture-responsibilities.md  frontend-format-approach.md  implementation-plan-image-video.md  product-research-brief.md  viability-assessment.md
fastapi_backend/: .env.example  README.md  fetch_stories.py  planet_api_test.py  pyproject.toml  requirements.txt  vercel.json
fastapi_backend/api/: index.py
fastapi_backend/app/: config.py  main.py  mcp_server.py  models.py  schemas.py
fastapi_backend/app/routes/: chatbot.py  stories.py
fastapi_backend/scripts/: README.md  populate_stories.py
nextjs-frontend/: .eslintignore  README.md  jest.config.ts  jest.setup.ts  next.config.mjs  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
nextjs-frontend/__tests__/: gallery.test.tsx  storyMetadata.test.ts
nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
specs/001-airbus-style-satellite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
story-analysis/: Viewer Instructions.md
story-analysis/reports/: Findings.md  Stats.md
story-analysis/scripts/: preprocess.py  scrape.py
story-analysis/viewer-client/: package.json  pnpm-lock.yaml
story-analysis/viewer-server/: data_insert.py  requirements.txt  server.py
(+47 files in other folders)
