[project]
name = "app"
version = "1.0.0"
description = "Planet Story Explorer - FastAPI backend for satellite imagery stories"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "supabase>=2.10.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.7.1",
    "fastmcp>=0.5.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"